# stock-sage

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  PAPER_TRADING.md  PROJECT.md  README.md  README_EN.md  SECURITY.md  STATUS.md  backfill_and_run.py  docker-compose.yml  m43_2_amihud_ic.py  mkdocs.yml  pyproject.toml  rerun_failed_6.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  test.yml
.pi/: SYSTEM.md
.pi/extensions/: stocksage.ts
.pi/prompts/: deep-research.md  paper-review.md  research-stock.md  watchlist-scan.md
alembic/: README.md  env.py
alembic/versions/: b87a3d661918_baseline_schema_31_orm_tables.py  d4a1b7c9e023_runtime_indexes_versioned.py
backend/: .env.example  config.py  main.py  requirements.txt  scheduler.py
backend/agent/: __init__.py  action_parser.py  action_registry.py  chat_responder.py  cli.py  context.py  http_guard.py  mcp_server.py  security.py
backend/agents/: __init__.py  analyst.py  director.py  pipeline.py  portfolio_manager.py  researcher.py  risk_manager.py  trader.py
backend/analysis/: factors.py  qlib_engine.py  sentiment.py  technical.py
backend/api/: deps.py  routes.py  schemas.py
backend/backtest/: alphalens_qlib.py  backfill_signals.py  backtrader_eval.py  compare_paths.py  exit_logic_experiment.py  exit_sweep.py  news_cache.py  portfolio_eval.py  signal_stats.py  signal_stats_universe.py  stock_picker.py  sweep_threshold.py  walk_forward.py
backend/data/: backfill_disclosure_dates.py  cache_policy.py  database.py  external_sources.py  fundamentals.py  global_data.py  market.py  market_capabilities.py  market_persistence.py  market_snapshots.py  market_sources.py  market_utils.py  models.py  news.py  news_audit.py  news_models.py  orm.py  point_in_time.py  price_quality.py  providers.py  qfii_holdings.py  qlib_data.py  quality.py  realtime.py  schema_runtime.py  seed.py  tickflow.py  tushare_qfq.py
backend/decision/: aggregator.py  decision_memory.py  harness.py  market_policy.py  memory_layered.py  research_constraints.py  signal_policy.py
backend/jobs/: __init__.py  intraday.py  postmarket.py  premarket.py  weekend.py
backend/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  local_cli_provider.py  openai_provider.py
backend/memory/: __init__.py  ai_memory.py  audit_log.py  backup.py  bias_override.py  chat_store.py  l0_memory.py  research_memory.py  should_remember.py  stock_memory.py  summarizer.py
backend/notification/: bark.py
backend/ops/: kill_switch.py  llm_usage.py
backend/portfolio/: __init__.py  combo_weights.py  portfolio_backtest.py  single_position.py  trailing_stop.py
backend/research/: ai_supply_chain_template.py  case.py  case_view.py  copilot.py  deep_research.py  dossier.py  forward_thesis.py  gate_b_recorder.py  research_evidence_defs.py  research_report_gate.py  review_loop.py  serenity_chokepoint.py  stress_test.py  theme_hypothesis_engine.py  thesis_ledger.py  universe_guard.py
backend/skills/: __init__.py  daily_review.py  vetter.py  watcher.py
backend/tools/: backfill_coverage.py  check_sensitive_paths.py  coverage_snapshot.py  gate_b_tracker.py  m26_expand_universe.py  m26_kronos_eval.py  m26_quant_baseline.py  m27_alpha_diagnostic.py  m27_build_test3_universe.py  m27_kronos_finetune_data.py  m27_kronos_path_a_launch.py  m27_kronos_preflight.py  m27_label_objective_eval.py  m27_sentiment_cache_backfill.py  m27_sentiment_cache_batch_runner.py  m27_test3_production_profile_ab.py  m27_top_decile_filter_ab.py  m27_top_decile_forward_shadow.py  m29_evidence_ledger.py  m29_forward_readiness.py  m29_hypothesis_registry.py  m29_provenance_audit.py  (+3 more)
docs/: ARCHITECTURE.md  ATLAS.md  ATLAS_GATE_B_EXPERIMENT.md  ATLAS_MERGE.md  ATLAS_MERGE_SAFETY.md  ATLAS_TEST4_EXPERIMENT.md  BUGS_FIXED.md  GATE_B_DQ_FINDINGS.md  M43_RETROSPECTIVE_EXPERIMENT.md  MEMORY_DESIGN.md  MEMORY_SYSTEM_PLAN.md  ROADMAP.md  STATE_GOVERNANCE.md  WHY_NOT_AI_STOCK_PICKER.md
docs_public/: EVIDENCE.md  index.md  ningde_live_sample.md
frontend/: README.md  index.html  package-lock.json  package.json
paper_trading/: backfill_missing_date.py  quant_attribution.py  results.md  stats.py  test1.md  test2.md  watchlist.md
scripts/: agent_mcp_config.py  agent_run.sh  agent_setup.sh  demo_seed.py  install.sh  mingcang_launcher.sh  stocksage_launcher.sh
tests/: conftest.py  test_agent_action_registry.py  test_agent_cli.py  test_agent_context.py  test_agent_http_guard.py  test_ai_supply_chain_template.py  test_architecture_boundaries.py  test_compare_paths.py  test_config.py  test_core_aggregator.py  test_core_database.py  test_core_paths_worker_d.py  test_core_pipeline.py  test_dashboard_summary.py  test_database_memory_migration.py  test_deep_research.py  test_exit_sweep.py  test_export_csv.py  test_external_data_sources.py  test_frontend_expansion_api.py  test_fundamentals.py  test_gate_b_tracker.py  test_kill_switch.py  test_l0_memory_atoms.py  test_llm_runtime_provider.py  test_long_term_team.py  test_m15_route_guards.py  test_m26_kronos_eval.py  test_m33_research_case.py  test_m34_stress_test.py  test_m35_thesis_ledger.py  test_m36_theme_hypothesis_engine.py  test_m37_review_loop.py  test_m38_universe.py  test_m39_forward_thesis.py  test_m3_audit_integration.py  test_m40_research_routes.py  test_m40_routes_http.py  test_m42_price_quality_guard.py  test_m42_remediation_cli.py  (+37 more)
(+79 files in other folders)
