[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-sage"
version = "0.2.0"
description = "A股辅助决策工具——量化信号 + LLM 情感分析 + 多 Agent 风控"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "zeeechenn" }]
keywords = ["quant", "trading", "a-share", "llm", "fastapi"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.0",
    "requests>=2.31.0",
    "akshare>=1.12.0",
    "efinance>=0.5.5",
    "tushare>=1.2.26",
    "yfinance>=0.2.38",
    "anthropic>=0.25.0",
    "apscheduler>=3.10.0",
    "feedparser>=6.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "lightgbm>=4.3.0",
    "scikit-learn>=1.4.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "backtrader>=1.9.78.123",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]
dev = [
    "stock-sage[test]",
    "stock-sage[agent]",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
agent = [
    "mcp>=1.0.0",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
exclude = ["tests*", "frontend*", "docs*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long — ruff format handles this
    "B008",  # do not perform function calls in default arguments (FastAPI pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.mypy]
python_version = "3.11"
plugins = ["sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["akshare.*", "efinance.*", "backtrader.*", "qlib.*", "alphalens.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
